Rename deploy type variable

--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -201,7 +201,7 @@ build:
       variables:
         ENVIRONMENT_SLUG: prod
 
-{% if cookiecutter.deploy_type == "k8s-digitalocean" %}.deploy:
+{% if cookiecutter.deployment_type == "k8s-digitalocean" %}.deploy:
   stage: Deploy
   image:
     name: docker:20
