--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -182,6 +182,10 @@ build:
     - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
       variables:
         ENVIRONMENT_SLUG: dev
+        TF_VAR_k8s_cluster_certificate: $DEV_K8S_CLUSTER_CERTIFICATE
+        TF_VAR_k8s_cluster_host: $DEV_K8S_CLUSTER_HOST
+        TF_VAR_k8s_cluster_token: $DEV_K8S_CLUSTER_TOKEN
+
 
 .staging:
   environment:
@@ -191,6 +195,9 @@ build:
     - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       variables:
         ENVIRONMENT_SLUG: stage
+        TF_VAR_k8s_cluster_certificate: $STAGE_K8S_CLUSTER_CERTIFICATE
+        TF_VAR_k8s_cluster_host: $STAGE_K8S_CLUSTER_HOST
+        TF_VAR_k8s_cluster_token: $STAGE_K8S_CLUSTER_TOKEN
 
 .production:
   environment:
@@ -200,8 +207,11 @@ build:
     - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
       variables:
         ENVIRONMENT_SLUG: prod
+        TF_VAR_k8s_cluster_certificate: $PROD_K8S_CLUSTER_CERTIFICATE
+        TF_VAR_k8s_cluster_host: $PROD_K8S_CLUSTER_HOST
+        TF_VAR_k8s_cluster_token: $PROD_K8S_CLUSTER_TOKEN
 
-{% if cookiecutter.deployment_type == "k8s-digitalocean" %}.deploy:
+.deploy:
   stage: Deploy
   image:
     name: docker:20
@@ -220,8 +230,9 @@ build:
       -e CI_JOB_TOKEN
       -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}-${ENVIRONMENT_SLUG}
       -e TF_ROOT
-      -e TF_VAR_digitalocean_cluster_name="${DIGITALOCEAN_CLUSTER_NAME}"
-      -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
+      -e TF_VAR_k8s_cluster_certificate
+      -e TF_VAR_k8s_cluster_host
+      -e TF_VAR_k8s_cluster_token
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
@@ -235,26 +246,7 @@ build:
       - ${TF_ROOT}/plan.cache
     reports:
       terraform: ${TF_ROOT}/plan.json
-{% else %}.deploy:
-  stage: Deploy
-  image:
-    name: docker:20
-  services:
-    - docker:20-dind
-  before_script:
-    - export DEPLOY_VERSION=$VERSION_REF
-  script:
-    - >
-      docker run --rm -v $PWD:/app -v $KUBE_CA_PEM_FILE:$KUBE_CA_PEM_FILE
-      -e KUBECONFIG=/tmp/.kube/config
-      -e DEPLOY_ENVIRONMENT
-      -e DEPLOY_VERSION
-      -e KUBE_CA_PEM_FILE
-      -e KUBE_TOKEN
-      -e KUBE_URL
-      --entrypoint=""
-      bitnami/kubectl:latest /app/scripts/deploy.sh
-{% endif %}
+
 deploy_development:
   extends:
     - .development
