--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -216,13 +216,13 @@ build:
     - >
       docker run --rm
       -u `id -u`
-      -v ${PWD}:${PWD}
       -v ${KUBECONFIG}:${KUBECONFIG}
+      -v ${PWD}:${PWD}
       -w ${PWD}
       -e CI_JOB_TOKEN
+      -e KUBE_CONFIG_PATH="${KUBECONFIG}"
       -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}-${ENVIRONMENT_SLUG}
       -e TF_ROOT
-      -e TF_VAR_k8s_cluster_config="${KUBECONFIG}"
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
