--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -81,6 +81,8 @@ publish:
   services:
     - docker:20-dind
   rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
     - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL
   before_script:
     - if [ "$CI_COMMIT_BRANCH" ]; then PACT_CONSUMER_TAG="branch:$CI_COMMIT_BRANCH"; else PACT_CONSUMER_TAG="tag:$CI_COMMIT_TAG"; fi
@@ -94,7 +96,7 @@ publish:
       pactfoundation/pact-cli:latest-node14 pact-broker publish /pacts
       --consumer-app-version=$VERSION_REF
       --tag=$PACT_CONSUMER_TAG
-  dependencies:
+  needs:
     - test
 
 pages:
@@ -111,7 +113,7 @@ pages:
 .can-i-deploy:
   stage: Pact-check
   allow_failure: false
-  dependencies:
+  needs:
     - publish
   image:
     name: docker:20
