--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -1,3 +1,3 @@
-INTERNAL_API_URL=https://localhost:8443
-NEXT_PUBLIC_PROJECT_URL=https://localhost:8443
+INTERNAL_API_URL=http://localhost:8080
+NEXT_PUBLIC_PROJECT_URL=http://localhost:8080
 REACT_ENVIRONMENT=Development
