--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -9,55 +9,57 @@
     "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
     "pact": "npx jest pact/contracts --detectOpenHandles",
     "eslint": "npx eslint . --fix-dry-run",
-    "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json",
-    "coverage": "yarn pact --coverage --passWithNoTests --coverageDirectory ./coverage/pacts && yarn test --coverage --coverageDirectory ./coverage/tests && npx istanbul-merge --out ./coverage/coverage-final.json ./coverage/pacts/coverage-final.json ./coverage/tests/coverage-final.json && npx istanbul report --include ./coverage/coverage-final.json --dir ./coverage lcov clover json-summary && rm -rf ./coverage/pacts && rm -rf ./coverage/tests"
+    "coverage": "yarn pact --coverage --passWithNoTests --coverageDirectory ./coverage/pacts && yarn test --coverage --coverageDirectory ./coverage/tests && npx istanbul-merge --out ./coverage/coverage-final.json ./coverage/pacts/coverage-final.json ./coverage/tests/coverage-final.json && npx istanbul report --include ./coverage/coverage-final.json --dir ./coverage text-summary text clover json-summary && rm -rf ./coverage/pacts && mv -v ./coverage/tests/* ./coverage/ && rm -rf ./coverage/tests/"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
-    "@sentry/nextjs": "^6.13.3",
-    "axios": "^0.23.0",
+    "@sentry/nextjs": "^6.14.0",
+    "axios": "^0.24.0",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "^11.1.2",
+    "next": "^12.0.3",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "styled-components": "^5.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^11.1.2",
-    "@pact-foundation/pact": "^9.16.4",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@babel/core": "^7.16.0",
+    "@next/eslint-plugin-next": "^12.0.3",
+    "@pact-foundation/pact": "^9.16.5",
+    "@testing-library/dom": "^8.11.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "@types/react-redux": "^7.1.19",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-redux": "^7.1.20",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "axios-mock-adapter": "^1.20.0",
-    "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "^8.0.1",
-    "eslint-config-next": "^11.1.2",
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
-    "istanbul-merge": "^1.1.1",
-    "jest": "^27.2.5",
+    "jest": "^27.3.1",
     "jest-pact": "^0.9.1",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "webpack": "^5.62.1"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -88,33 +90,40 @@
     "extends": [
       "eslint:recommended",
       "next",
-      "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended",
       "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error",
       "@typescript-eslint/explicit-module-boundary-types": "off",
-      "react/prop-types": 0,
-      "react/no-unescaped-entities": 0,
-      "camelcase": [
-        2,
-        {
-          "properties": "always"
-        }
-      ],
       "@typescript-eslint/no-unused-vars": [
         "warn",
         {
           "argsIgnorePattern": "^_",
           "varsIgnorePattern": "^_"
         }
-      ]
+      ],
+      "camelcase": [
+        2,
+        {
+          "properties": "always"
+        }
+      ],
+      "prettier/prettier": "error",
+      "react/no-unescaped-entities": 0,
+      "react/prop-types": 0
     }
   },
   "jest": {
     "testMatch": [
       "**/__tests__/**/*.test.ts?(x)"
+    ],
+    "setupFilesAfterEnv": [
+      "./__tests__/setupTests.ts"
+    ],
+    "collectCoverageFrom": [
+      "components/**/*.{ts,tsx}",
+      "utils/**/*.{ts,tsx}"
     ],
     "moduleNameMapper": {
       "@/(.*)$": "<rootDir>/$1"
