--- a/{{cookiecutter.project_dirname}}/tsconfig.json
+++ b/{{cookiecutter.project_dirname}}/tsconfig.json
@@ -1,34 +1,39 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "baseUrl": ".",
-    "target": "es5",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true,
+    "isolatedModules": true,
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
+    "jsx": "preserve",
     "module": "esnext",
     "moduleResolution": "node",
+    "noEmit": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
+    "skipLibCheck": true,
+    "strict": false,
+    "target": "es5",
     "paths": {
-      "@/*": ["*"]
-    }
+      "@/*": [
+        "*"
+      ]
+    },
   },
   "include": [
     "next-env.d.ts",
+    "**/*.test.tsx",
     "**/*.ts",
     "**/*.tsx"
   ],
   "exclude": [
     "node_modules",
-    "*.js"
+    "*.js",
+    "cypress/**"
   ]
 }
