--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 stages:
   - Test
   - Pact-publish
-  - Report
   - Pact-check
   - Build
+  - Report
   - Deploy
   - Pact-tag
   - Sentry
@@ -347,7 +347,22 @@ rollback_development:
   extends:
     - .development
     - .rollback
+  needs: ["deploy_development"]
   rules:
+    - if: $PACT_ENABLED == "true"
+      when: never
+    - if: $CI_COMMIT_BRANCH == "develop"
+      when: manual
+      allow_failure: true
+
+rollback_development_pacts:
+  extends:
+    - .development
+    - .rollback
+  needs: ["deploy_development_pacts"]
+  rules:
+    - if: $PACT_ENABLED != "true"
+      when: never
     - if: $CI_COMMIT_BRANCH == "develop"
       when: manual
       allow_failure: true
@@ -356,7 +371,22 @@ rollback_staging:
   extends:
     - .staging
     - .rollback
+  needs: ["deploy_staging"]
   rules:
+    - if: $PACT_ENABLED == "true"
+      when: never
+    - if: $CI_COMMIT_BRANCH == "master"
+      when: manual
+      allow_failure: true
+
+rollback_staging_pacts:
+  extends:
+    - .staging
+    - .rollback
+  needs: ["deploy_staging_pacts"]
+  rules:
+    - if: $PACT_ENABLED != "true"
+      when: never
     - if: $CI_COMMIT_BRANCH == "master"
       when: manual
       allow_failure: true
@@ -365,10 +395,26 @@ rollback_production:
   extends:
     - .production
     - .rollback
+  needs: ["deploy_production"]
   rules:
+    - if: $PACT_ENABLED == "true"
+      when: never
     - if: $CI_COMMIT_TAG
       when: manual
       allow_failure: true
+
+rollback_production_pacts:
+  extends:
+    - .production
+    - .rollback
+  needs: ["deploy_production_pacts"]
+  rules:
+    - if: $PACT_ENABLED != "true"
+      when: never
+    - if: $CI_COMMIT_TAG
+      when: manual
+      allow_failure: true
+
 
 .create-version-tag:
   image:
