--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -27,7 +27,7 @@ sentry_release:
   services:
     - docker:20-dind
   rules:
-    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" ||  $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG)
+    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" || $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG)
   script:
     - RELEASE_START=$(date +%s)
     - >
@@ -181,39 +181,30 @@ can-i-deploy_production:
 
 build_development:
   extends: .build
-  needs: ["test"]
+  needs:
+    - job: can-i-deploy_development
+      optional: true
+    - job: test
   rules:
-    - if: $PACT_ENABLED != "true" && $CI_COMMIT_BRANCH == "develop"
-
-build_development_pacts:
-  extends: .build
-  needs: ["can-i-deploy_development"]
-  rules:
-    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "develop"
+    - if: $CI_COMMIT_BRANCH == "develop"
 
 build_staging:
   extends: .build
-  needs: ["test"]
+  needs:
+    - job: can-i-deploy_staging
+      optional: true
+    - job: test
   rules:
-    - if: $PACT_ENABLED != "true" && $CI_COMMIT_BRANCH == "master"
-
-build_staging_pacts:
-  extends: .build
-  needs: ["can-i-deploy_staging"]
-  rules:
-    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_BRANCH == "master"
 
 build_production:
   extends: .build
-  needs: ["test"]
+  needs:
+    - job: can-i-deploy_production
+      optional: true
+    - job: test
   rules:
-    - if: $PACT_ENABLED != "true" && $CI_COMMIT_TAG
-
-build_production_pacts:
-  extends: .build
-  needs: ["can-i-deploy_production"]
-  rules:
-    - if: $PACT_ENABLED == "true" && $CI_COMMIT_TAG
+    - if: $CI_COMMIT_TAG
 
 .development:
   environment:
@@ -272,20 +263,6 @@ deploy_development:
     - .deploy
   needs: ["build_development"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $CI_COMMIT_BRANCH == "develop"
-      variables:
-        ENVIRONMENT_SLUG: dev
-
-deploy_development_pacts:
-  extends:
-    - .development
-    - .deploy
-  needs: ["build_development_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $CI_COMMIT_BRANCH == "develop"
       variables:
         ENVIRONMENT_SLUG: dev
@@ -296,20 +273,6 @@ deploy_staging:
     - .deploy
   needs: ["build_staging"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $CI_COMMIT_BRANCH == "master"
-      variables:
-        ENVIRONMENT_SLUG: stage
-
-deploy_staging_pacts:
-  extends:
-    - .staging
-    - .deploy
-  needs: ["build_staging_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $CI_COMMIT_BRANCH == "master"
       variables:
         ENVIRONMENT_SLUG: stage
@@ -320,20 +283,6 @@ deploy_production:
     - .deploy
   needs: ["build_production"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $CI_COMMIT_TAG
-      variables:
-        ENVIRONMENT_SLUG: prod
-
-deploy_production_pacts:
-  extends:
-    - .production
-    - .deploy
-  needs: ["build_production_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $CI_COMMIT_TAG
       variables:
         ENVIRONMENT_SLUG: prod
@@ -349,20 +298,6 @@ rollback_development:
     - .rollback
   needs: ["deploy_development"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $CI_COMMIT_BRANCH == "develop"
-      when: manual
-      allow_failure: true
-
-rollback_development_pacts:
-  extends:
-    - .development
-    - .rollback
-  needs: ["deploy_development_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $CI_COMMIT_BRANCH == "develop"
       when: manual
       allow_failure: true
@@ -373,20 +308,6 @@ rollback_staging:
     - .rollback
   needs: ["deploy_staging"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $CI_COMMIT_BRANCH == "master"
-      when: manual
-      allow_failure: true
-
-rollback_staging_pacts:
-  extends:
-    - .staging
-    - .rollback
-  needs: ["deploy_staging_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $CI_COMMIT_BRANCH == "master"
       when: manual
       allow_failure: true
@@ -397,24 +318,9 @@ rollback_production:
     - .rollback
   needs: ["deploy_production"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
     - if: $CI_COMMIT_TAG
       when: manual
       allow_failure: true
-
-rollback_production_pacts:
-  extends:
-    - .production
-    - .rollback
-  needs: ["deploy_production_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
-    - if: $CI_COMMIT_TAG
-      when: manual
-      allow_failure: true
-
 
 .create-version-tag:
   image:
@@ -425,7 +331,7 @@ rollback_production_pacts:
 
 create-version-tag_development:
   extends: .create-version-tag
-  needs: ["deploy_development_pacts"]
+  needs: ["deploy_development"]
   rules:
     - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "develop"
   script:
@@ -441,7 +347,7 @@ create-version-tag_development:
 
 create-version-tag_staging:
   extends: .create-version-tag
-  needs: ["deploy_staging_pacts"]
+  needs: ["deploy_staging"]
   rules:
     - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master"
   script:
@@ -457,7 +363,7 @@ create-version-tag_staging:
 
 create-version-tag_production:
   extends: .create-version-tag
-  needs: ["deploy_production_pacts"]
+  needs: ["deploy_production"]
   rules:
     - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_TAG
   script:
@@ -490,19 +396,6 @@ sentry_success_development:
   extends: .sentry_deploy_success
   needs: ["deploy_development"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop"
-      when: on_success
-      variables:
-        SENTRY_ENV: Development
-
-sentry_success_development_pacts:
-  extends: .sentry_deploy_success
-  needs: ["deploy_development_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop"
       when: on_success
       variables:
@@ -512,19 +405,6 @@ sentry_success_staging:
   extends: .sentry_deploy_success
   needs: ["deploy_staging"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master"
-      when: on_success
-      variables:
-        SENTRY_ENV: Staging
-
-sentry_success_staging_pacts:
-  extends: .sentry_deploy_success
-  needs: ["deploy_staging_pacts"]
-  rules:
-    - if: $PACT_ENABLED != "true"
-      when: never
     - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master"
       when: on_success
       variables:
@@ -534,19 +414,6 @@ sentry_success_production:
   extends: .sentry_deploy_success
   needs: ["deploy_production"]
   rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
-    - if: $SENTRY_DSN && $CI_COMMIT_TAG
-      when: on_success
-      variables:
-        SENTRY_ENV: Production
-
-sentry_success_production_pacts:
-  extends: .sentry_deploy_success
-  needs: ["deploy_production_pacts"]
-  rules:
-    - if: $PACT_ENABLED == "true"
-      when: never
     - if: $SENTRY_DSN && $CI_COMMIT_TAG
       when: on_success
       variables:
