--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -167,6 +167,7 @@ can-i-deploy_production:
       --tag=$CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF
       --file=docker/remote.Dockerfile
       --target=remote
+      --build-arg PORT="${FRONTEND_SERVICE_PORT:-{{ cookiecutter.internal_service_port }}{{ '}' }}"
       --build-arg SENTRY_AUTH_TOKEN=$SENTRY_AUTH_TOKEN
       --build-arg SENTRY_DSN=$SENTRY_DSN
       --build-arg SENTRY_ORG=$SENTRY_ORG
@@ -242,7 +243,6 @@ build_production:
       -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/nextsurvey-${ENVIRONMENT_SLUG}
       -e TF_ROOT
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
-      -e TF_VAR_internal_service_port="${PORT}"
       -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_service_container_image
