--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -243,7 +243,7 @@ build_production:
       -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/nextsurvey-${ENVIRONMENT_SLUG}
       -e TF_ROOT
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
-      -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
+      -e TF_VAR_internal_url="${INTERNAL_URL}"
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
