--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.black]
-target-version = ["py39"]
+target-version = ["py310"]
 
 [tool.isort]
 atomic = true
 profile = "black"
-combine_as_imports = true
-default_section = "THIRDPARTY"
+
+[tool.mypy]
+python_version = "3.10"
+ignore_missing_imports = true
