--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -234,12 +234,10 @@ build_production:
     - >
       docker run --rm
       -u `id -u`
-      -v ${KUBECONFIG}:${KUBECONFIG}
       -v ${PWD}:${PWD}
       -w ${PWD}
       -e CI_JOB_TOKEN
-      -e KUBE_CONFIG_PATH="${KUBECONFIG}"
-      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/nextsurvey-${ENVIRONMENT_SLUG}
+      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}_${ENVIRONMENT_SLUG}
       -e TF_ROOT
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_backend_url="${INTERNAL_BACKEND_URL}"
@@ -248,6 +246,7 @@ build_production:
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
       -e TF_VAR_service_replicas
+      -e TF_VAR_stacks
       registry.gitlab.com/gitlab-org/terraform-images/stable:latest ./scripts/deploy.sh
   artifacts:
     name: plan
