--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -14,12 +14,12 @@
     "coverage": "npx istanbul-merge --out ./coverage/coverage-final.json ./coverage/pacts/coverage-final.json ./coverage/tests/coverage-final.json && npx istanbul report --include ./coverage/coverage-final.json --dir ./coverage text-summary text json-summary"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@sentry/nextjs": "^6.14.0",
-    "axios": "^0.24.0",
+    "@reduxjs/toolkit": "^1.8.0",
+    "@sentry/nextjs": "^6.18.2",
+    "axios": "^0.26.0",
     "basic-auth": "^2.0.1",
-    "express": "^4.17.1",
-    "next": "^12.0.3",
+    "express": "^4.17.3",
+    "next": "^12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
@@ -31,37 +31,37 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@next/eslint-plugin-next": "^12.0.3",
-    "@pact-foundation/pact": "^9.16.5",
-    "@testing-library/dom": "^8.11.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
+    "@babel/core": "^7.17.5",
+    "@next/eslint-plugin-next": "^12.1.0",
+    "@pact-foundation/pact": "^9.17.2",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-redux": "^7.1.20",
-    "@types/styled-components": "^5.1.15",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-redux": "^7.1.23",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "axios-mock-adapter": "^1.20.0",
-    "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "^12.0.3",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "babel-plugin-styled-components": "^2.0.6",
+    "eslint": "8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-react": "^7.26.1",
-    "jest": "^27.3.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "jest": "^27.5.1",
     "jest-junit": "^13.0.0",
     "jest-pact": "^0.9.1",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4",
+    "prettier": "^2.5.1",
+    "typescript": "^4.6.2",
     "webpack": "^5.63.0"
   },
   "prettier": {
