--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -27,7 +27,7 @@ sentry_release:
   services:
     - docker:20-dind
   rules:
-    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" || $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG)
+    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" || $CI_COMMIT_BRANCH == "main" || $CI_COMMIT_TAG)
   script:
     - RELEASE_START=$(date +%s)
     - >
@@ -142,7 +142,7 @@ can-i-deploy_development:
 can-i-deploy_staging:
   extends: .can-i-deploy
   rules:
-    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "master"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "main"
       variables:
         DEPLOY_ENV: staging
 
@@ -193,7 +193,7 @@ build_staging:
       optional: true
     - job: test
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_BRANCH == "main"
 
 build_production:
   extends: .build
@@ -272,7 +272,7 @@ deploy_staging:
     - .deploy
   needs: ["build_staging"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_BRANCH == "main"
       variables:
         ENVIRONMENT_SLUG: stage
         STACK_SLUG: "${STACK_SLUG_STAGE}"
@@ -309,7 +309,7 @@ rollback_staging:
     - .rollback
   needs: ["deploy_staging"]
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_COMMIT_BRANCH == "main"
       when: manual
       allow_failure: true
 
@@ -350,7 +350,7 @@ create-version-tag_staging:
   extends: .create-version-tag
   needs: ["deploy_staging"]
   rules:
-    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "master"
+    - if: $PACT_ENABLED == "true" && $CI_COMMIT_BRANCH == "main"
   script:
     - >
       docker run --rm
@@ -406,7 +406,7 @@ sentry_success_staging:
   extends: .sentry_deploy_success
   needs: ["deploy_staging"]
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master"
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "main"
       when: on_success
       variables:
         SENTRY_ENV: Staging
@@ -445,7 +445,7 @@ sentry_failure_development:
 sentry_failure_staging:
   extends: .sentry_deploy_failure
   rules:
-    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master"
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "main"
       when: on_failure
       variables:
         SENTRY_ENV: Staging
