--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -227,20 +227,10 @@ build_production:
     - docker:20-dind
   variables:
     TF_ROOT: ${CI_PROJECT_DIR}/terraform
-    TERRAFORM_CMD: {{ {"terraform-cloud": "terraform"}.get(cookiecutter.terraform_backend, "gitlab-terraform") }}
-    TERRAFORM_IMAGE: {{ {"terraform-cloud": "hashicorp/terraform"}.get(cookiecutter.terraform_backend, "registry.gitlab.com/gitlab-org/terraform-images/stable") }}:latest
+    TERRAFORM_CMD: "gitlab-terraform"
+    TERRAFORM_IMAGE: "registry.gitlab.com/gitlab-org/terraform-images/stable:latest"
   before_script:
-    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}{% if cookiecutter.terraform_backend == "terraform-cloud" %}
-    - export TF_WORKSPACE={{ cookiecutter.project_slug }}-${ENVIRONMENT_SLUG}
-    - |
-      cat > ${TF_CLI_CONFIG_FILE} <<EOF
-      {
-        "credentials": {"app.terraform.io": {
-            "token": "${TFC_TOKEN}"
-          }
-        }
-      }
-      EOF{% endif %}
+    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}
   script:
     - >
       docker run --rm
@@ -248,9 +238,8 @@ build_production:
       -v ${PWD}:${PWD}
       -w ${PWD}
       -e CI_JOB_TOKEN
-      -e TERRAFORM_CMD{% if cookiecutter.terraform_backend == "gitlab" %}
-      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}_${ENVIRONMENT_SLUG}{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" %}
-      -e TF_CLI_CONFIG_FILE{% endif %}
+      -e TERRAFORM_CMD
+      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}_${ENVIRONMENT_SLUG}
       -e TF_IN_AUTOMATION=1
       -e TF_ROOT
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
@@ -261,8 +250,7 @@ build_production:
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
       -e TF_VAR_service_replicas
-      -e TF_VAR_stack_slug="${STACK_SLUG}"{% if cookiecutter.terraform_backend == "terraform-cloud" %}
-      -e TF_WORKSPACE{% endif %}
+      -e TF_VAR_stack_slug="${STACK_SLUG}"
       ${TERRAFORM_IMAGE}: ./scripts/deploy.sh
   artifacts:
     name: plan
