--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,15 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements/test.txt
-    - name: Code formatting
-      run: |
-        black .
-    - name: Sorting imports
-      run: |
-        isort .
-    - name: Sorting imports
-      run: |
-        flake8
-    - name: Test with pytest
+    - name: Run Test
       run: |
         python3 -m unittest
