--- a/requirements/common.in
+++ b/requirements/common.in
@@ -1,4 +1,6 @@
-click~=8.0.0
+black~=22.3.0
+click~=8.1.0
 cookiecutter~=1.7.0
-python-slugify~=6.1.0
+pip-tools~=6.5.0
+types-python-slugify~=5.0.0
 validators~=0.18.0
