--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -226,7 +226,7 @@ build_production:
   services:
     - docker:20-dind
   variables:
-    TF_ROOT: ${CI_PROJECT_DIR}/terraform
+    TF_ROOT: ${CI_PROJECT_DIR}/terraform/{{ cookiecutter.deployment_type }}
     TERRAFORM_CMD: "gitlab-terraform"
     TERRAFORM_IMAGE: "registry.gitlab.com/gitlab-org/terraform-images/stable:latest"
   before_script:
@@ -241,11 +241,14 @@ build_production:
       -e TERRAFORM_CMD
       -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}_${ENVIRONMENT_SLUG}
       -e TF_IN_AUTOMATION=1
-      -e TF_ROOT
-      -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
+      -e TF_ROOT{% if cookiecutter.deployment_type == "digitalocean-k8s" %}
+      -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"{% endif %}
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_backend_url="${INTERNAL_BACKEND_URL}"
-      -e TF_VAR_internal_service_port="${FRONTEND_SERVICE_PORT}"
+      -e TF_VAR_internal_service_port="${FRONTEND_SERVICE_PORT}"{% if cookiecutter.deployment_type == "other-k8s" %}
+      -e TF_VAR_kubernetes_cluster_ca_certificate="${KUBERNETES_CLUSTER_CA_CERTIFICATE}"
+      -e TF_VAR_kubernetes_host="${KUBERNETES_HOST}"
+      -e TF_VAR_kubernetes_token="${KUBERNETES_TOKEN}"{% endif %}
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
