--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -1,3 +1,5 @@
 INTERNAL_BACKEND_URL=http://localhost:8080
 NEXT_PUBLIC_PROJECT_URL=http://localhost:8080
 REACT_ENVIRONMENT=Development
+SERVICE_BUILD_TARGET=''
+SERVICE_DOCKER_FILE=docker/local.Dockerfile
