--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -48,21 +48,21 @@ test:
   image: docker:20
   services:
     - docker:20-dind
+  needs: []
   variables:
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
-    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
   script:
-    - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
     - >
       docker build
       --tag=$SERVICE_IMAGE_NAME:$SERVICE_IMAGE_TAG
       --file=docker/remote.Dockerfile
       --target=test .
     - docker run --name=$SERVICE_CONTAINER_NAME $SERVICE_IMAGE_NAME:$SERVICE_IMAGE_TAG
-    - docker cp $SERVICE_CONTAINER_NAME:/temp/coverage .
-    - docker cp $SERVICE_CONTAINER_NAME:/temp/junit.xml ./junit.xml
-    - if [ "$PACT_ENABLED" == true ]; then docker cp $SERVICE_CONTAINER_NAME:/temp/__tests__/pacts .; fi
+    - docker cp $SERVICE_CONTAINER_NAME:/app/coverage .
+    - docker cp $SERVICE_CONTAINER_NAME:/app/junit.xml ./junit.xml
+    - if [ "$PACT_ENABLED" == true ]; then docker cp $SERVICE_CONTAINER_NAME:/app/pacts .; fi
   after_script:
     - docker stop $SERVICE_CONTAINER_NAME
     - docker container rm $SERVICE_CONTAINER_NAME
@@ -225,12 +225,8 @@ build_production:
     name: docker:20
   services:
     - docker:20-dind
-  variables:
-    TF_ROOT: ${CI_PROJECT_DIR}/terraform/digitalocean-k8s
-    TERRAFORM_BACKEND: terraform-cloud
   before_script:
-    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}{% if cookiecutter.terraform_backend != "gitlab" %}
-    - export TF_WORKSPACE={{ cookiecutter.project_slug }}-${ENVIRONMENT_SLUG}{% endif %}
+    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}
   script:
     - >
       docker run --rm
@@ -238,10 +234,12 @@ build_production:
       -v ${PWD}:${PWD}
       -w ${PWD}
       -e CI_JOB_TOKEN
-      -e TERRAFORM_CMD{% if cookiecutter.terraform_backend == "gitlab" %}
+      -e TERRAFORM_BACKEND={{ cookiecutter.terraform_backend }}
+      -e TERRAFORM_CMD=${CI_PROJECT_DIR}/scripts/terraform.sh
+      -e TERRAFORM_EXTRA_VAR_FILE=${ENVIRONMENT_SLUG}.tfvars
+      -e TERRAFORM_VARS_DIR=${CI_PROJECT_DIR}/terraform/vars{% if cookiecutter.terraform_backend == "gitlab" %}
       -e TF_STATE_NAME=env_${ENVIRONMENT_SLUG}{% endif %}
-      -e TF_IN_AUTOMATION=1
-      -e TF_ROOT{% if cookiecutter.deployment_type == "digitalocean-k8s" %}
+      -e TF_ROOT=${CI_PROJECT_DIR}/terraform/{{ cookiecutter.deployment_type }}{% if cookiecutter.deployment_type == "digitalocean-k8s" %}
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"{% endif %}
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_backend_url="${INTERNAL_BACKEND_URL}"
@@ -249,13 +247,14 @@ build_production:
       -e TF_VAR_kubernetes_cluster_ca_certificate="${KUBERNETES_CLUSTER_CA_CERTIFICATE}"
       -e TF_VAR_kubernetes_host="${KUBERNETES_HOST}"
       -e TF_VAR_kubernetes_token="${KUBERNETES_TOKEN}"{% endif %}
+      -e TF_VAR_project_slug="{{ cookiecutter.project_slug }}"
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_service_container_image
-      -e TF_VAR_service_container_port
-      -e TF_VAR_service_replicas
+      -e TF_VAR_service_slug="{{ cookiecutter.service_slug }}"
       -e TF_VAR_stack_slug="${STACK_SLUG}"{% if cookiecutter.terraform_backend != "gitlab" %}
-      -e TF_WORKSPACE{% endif %}
-      ${TERRAFORM_IMAGE}: ./scripts/deploy.sh
+      -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_frontend_environment_${ENVIRONMENT_SLUG}"{% endif %}
+      -e TFC_TOKEN
+      registry.gitlab.com/gitlab-org/terraform-images/stable:latest ./scripts/deploy.sh
   artifacts:
     name: plan
     reports:
