Support Terraform Cloud (#30)
* Bootstrap and basic gitlab ci configuration

* Merge branch 'master' of https://github.com/20tab/react-ts-continuous-delivery into feature/terraform-cloud

* Update from subrepo

* Add default for internal_backend_url

* Fix Docker image

* Update README

* Add precommit

* Update template

* Fix Formatter error

* Fix terraform cloud

Co-authored-by: Filippo Morelli <filippo@20tab.com>

--- a/{{cookiecutter.project_dirname}}/.gitignore
+++ b/{{cookiecutter.project_dirname}}/.gitignore
@@ -6,9 +6,10 @@
 .pnp.js
 
 # testing
-/coverage
 __tests__/logs
-__tests__/pacts
+/coverage
+/pacts
+junit.xml
 
 # next.js
 /.next/
@@ -40,7 +41,7 @@ yarn-error.log*
 .terraform.lock*
 .terraform/
 *.tfstate*
-*.tfvars
+terraform.tfvars
 
 # vercel
 .vercel
