--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -9,60 +9,60 @@
     "eslint": "npx eslint . --fix-dry-run",
     "pact": "npx jest pact/contracts --detectOpenHandles",
     "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
-    "ci:unit-test": "npx jest --detectOpenHandles --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",
-    "ci:contract-test": "npx jest pact/contracts --detectOpenHandles --coverage --passWithNoTests --coverageDirectory ./coverage/pacts",
-    "coverage": "npx istanbul-merge --out ./coverage/coverage-final.json ./coverage/pacts/coverage-final.json ./coverage/tests/coverage-final.json && npx istanbul report --include ./coverage/coverage-final.json --dir ./coverage text-summary text json-summary"
+    "ci:unit-test": "npx jest --color --detectOpenHandles --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",
+    "ci:contract-test": "npx jest pact/contracts --color --detectOpenHandles --passWithNoTests"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.0",
-    "@sentry/nextjs": "^6.18.2",
-    "axios": "^0.26.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@sentry/nextjs": "^6.19.7",
+    "axios": "^0.27.2",
     "basic-auth": "^2.0.1",
-    "express": "^4.17.3",
-    "next": "^12.1.0",
+    "express": "^4.18.0",
+    "next": "^12.1.5",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-is": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "styled-components": "^5.3.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-is": "^18.1.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@next/eslint-plugin-next": "^12.1.0",
-    "@pact-foundation/pact": "^9.17.2",
-    "@testing-library/dom": "^8.11.3",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "@babel/core": "^7.17.9",
+    "@next/eslint-plugin-next": "^12.1.5",
+    "@pact-foundation/pact": "^9.17.3",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-redux": "^7.1.23",
-    "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "@types/react-redux": "^7.1.24",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "axios-mock-adapter": "^1.20.0",
-    "babel-plugin-styled-components": "^2.0.6",
-    "eslint": "8.10.0",
-    "eslint-config-next": "^12.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "8.14.0",
+    "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.3",
-    "jest": "^27.5.1",
-    "jest-junit": "^13.0.0",
-    "jest-pact": "^0.9.1",
-    "prettier": "^2.5.1",
-    "typescript": "^4.6.2",
-    "webpack": "^5.63.0"
+    "eslint-plugin-react": "^7.29.4",
+    "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
+    "jest-junit": "^13.2.0",
+    "jest-pact": "^0.9.3",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0"
   },
   "prettier": {
     "arrowParens": "avoid",
